[package]
name = "insilico-node"
version = "0.1.0"
authors = ["Denis Kolodin <denis.kolodin@xdev.re>"]

[dependencies]
log = "0.3.8"
env_logger = "0.4.3"
exonum = { path = "../exonum" }
iron = "0.6.0"
router = "0.6.0"
serde = "1.0.10"
serde_derive = "1.0.10"
serde_json = "1.0.2"
bodyparser = "0.8.0"
params = "0.8"
lazy_static = "1.0.0"